<resources>
    <string name="app_name">Quiz</string>
    <string name="action_settings">Color de fondo</string>
    <string name="opcion1" />
    <string name="opcion2" />
    <string name="opcion3" />
    <string name="opcion4" />
    <string name="pregunta" />
    <string name="puntos" />
    <string name="puntuacion">Puntuacion</string>
    <string name="enviar">Enviar</string>
    <string name="puntuacion_final">Puntuación final: </string>
    <string name="volver_a_jugar">Volver a jugar</string>
    <string-array name="opcionesSpinner">
        <item>Ulan Bator</item>
        <item>Coruscant</item>
        <item>Alcorcón</item>
        <item>Endor</item>
    </string-array>
    <string name="nuevoJugador">Nuevo jugador</string>
    <string name="ranking">Ranking</string>
    <string name="escoger">Escoja su perfil :</string>
    <string name="play">Jugar</string>
    <string name="guardar">Guardar</string>
    <string name="introduce_tu_nickname">Introduce tu nickname</string>
    <string name="nuevo_jugador">Nuevo jugador</string>
</resources>
