<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">
    <RadioGroup
        android:id="@+id/opciones"
        android:layout_width="371dp"
        android:layout_height="600dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="275dp"
            android:layout_height="63dp"
            android:layout_marginTop="4dp"
            android:text="@string/pregunta"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioButtons"
            android:layout_width="214dp"
            android:layout_height="243dp"
            android:visibility="gone">

            <RadioButton
                android:id="@+id/opc1"
                android:layout_width="200dp"
                android:layout_height="28dp"
                android:layout_marginTop="25dp"
                android:text="@string/opcion1"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="136dp" />

            <RadioButton
                android:id="@+id/opc2"
                android:layout_width="200dp"
                android:layout_height="28dp"
                android:layout_marginTop="25dp"
                android:text="@string/opcion2"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="136dp" />

            <RadioButton
                android:id="@+id/opc3"
                android:layout_width="200dp"
                android:layout_height="28dp"
                android:layout_marginTop="25dp"
                android:text="@string/opcion3"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="136dp" />

            <RadioButton
                android:id="@+id/opc4"
                android:layout_width="200dp"
                android:layout_height="28dp"
                android:layout_marginTop="25dp"
                android:text="@string/opcion4"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="136dp" />
        </RadioGroup>

        <RadioGroup
            android:id="@id/checkBoxes"
            android:layout_width="214dp"
            android:layout_height="243dp"
            android:visibility="gone">

            <CheckBox
                android:id="@id/check1"
                android:layout_width="200dp"
                android:layout_height="28dp"
                android:layout_marginTop="25dp" />

            <CheckBox
                android:id="@id/check2"
                android:layout_width="200dp"
                android:layout_height="28dp"
                android:layout_marginTop="25dp" />

            <CheckBox
                android:id="@id/check3"
                android:layout_width="200dp"
                android:layout_height="28dp"
                android:layout_marginTop="25dp" />

            <CheckBox
                android:id="@id/check4"
                android:layout_width="200dp"
                android:layout_height="28dp"
                android:layout_marginTop="25dp" />
        </RadioGroup>

        <RadioGroup
            android:id="@id/spinner"
            android:layout_width="214dp"
            android:layout_height="243dp"
            android:visibility="gone">

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </RadioGroup>


        <ImageView
            android:id="@+id/img"
            android:layout_width="287dp"
            android:layout_height="106dp"
            android:src="@drawable/paris"
            android:visibility="gone" />

        <Button
            android:id="@+id/enviar"
            android:layout_width="74dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/enviar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/puntuacion"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/puntos"
            android:layout_width="41dp"
            android:layout_height="39dp"
            android:layout_marginTop="15dp"
            android:text=""
            android:textSize="20dp"
            android:textStyle="bold" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>